--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-swipeable": "^6.2.0",
     "swr": "^1.2.2"
   },
   "devDependencies": {
